<resources>
    <string name="app_name" translatable="false">AdHell 3</string>
    <string name="wait">Wait…</string>
    <string name="Reports">Reports</string>
    <string name="about">App for Samsung smartphones that blocks ads and trackers in Chrome. Website
        loading increases up to 100%!
    </string>
    <string name="isSupported">Wait</string>
    <string name="only_samsung">Only Samsung</string>
    <string name="phone_not_supported">This device not supported FOR NOW</string>
    <string name="preference_policy">policy-preference</string>
    <string name="isPolicyEnabled">isPolicyEnabled</string>
    <string name="block_enabled">Adhell enabled. You are safe now</string>
    <string name="block_disabled">Adhell disabled</string>
    <string name="enable_blocker">Enable content blocker</string>
    <string name="disable_blocker">Disable Adhell</string>
    <string name="works_whit_samsung">This device not supported. Works with Samsung only, at least
        for now
    </string>
    <string name="android_version_not_supported">This Android version not supported</string>
    <string name="please_wait">Please wait… Enabling Adhell</string>
    <string name="wait_deleting">Please wait… Disabling Adhell</string>
    <string name="adhell_not_supported">Adhell does not supported on your device yet.
    </string>
    <string name="yes_notify_me">Yes! Notify Me!</string>
    <string name="no_thanks">No, Thanks!</string>
    <string name="thank_you_we_will_notify_you">We will notify you right after add your
        device to Adhell.
    </string>
    <string name="notify_you_2">Your device not supported. But we will notify you at {{email}} when
        we will add your device to Adhell. Thank you
    </string>
    <string name="edit_email">Wrong email? Change it!</string>
    <string name="edit">Edit</string>
    <string name="to_enable_adhell">
        This app uses the Device Administrator permission (android.permission.BIND_DEVICE_ADMIN).
        \nTo enable Adhell you need to activate admin mode for app.
        Adhell uses underlying Samsung instruments, and these instruments require Admin privilege.
    </string>
    <string name="turn_on_admin">Turn On Admin</string>
    <string name="knox">To block ads Adhell uses Samsung Firewall, to use it please activate Samsung
        license. It is free.
    </string>
    <string name="activate_knox">Activate Knox</string>
    <string name="no_internet_connection">It seems that your device is not connected to the
        internet
    </string>
    <string name="failed_to_activate_knox_message">Knox license activation failed
    </string>
    <string name="activating_knox_license">Activating…</string>
    <string name="knox_license_activated">Activated</string>
    <string name="block_button_text_turn_off">Turn Off</string>
    <string name="block_button_text_turn_on">Turn On</string>
    <string name="block_button_text_enabling">Enabling…</string>
    <string name="block_button_text_disabling">Disabling…</string>
    <string name="edit_block_list">Edit Blocked URLs/Rules</string>
    <string name="whitelist">Show Whitelist</string>
    <string name="blocklist">Show Blocklist</string>
    <string name="back_to_main">Back to Main</string>
    <string name="editAlert">To take effect, turn off and turn on Adhell after editing list.\n\nAn URL can contain wildcard, e.g. *facebook.com\nTo define URL for an individual app, please use this following format:\npackageName|url
    </string>
    <string name="allow_apps">Manage Whitelisted Apps</string>
    <string name="delete_app">Turn Off and Delete Adhell</string>
    <string name="delete_app_dialog_title">Delete app</string>
    <string name="delete_app_dialog_text">Do you really want to turn off and delete Adhell?</string>
    <string name="applist">Show App List</string>
    <string name="list_filter">Filter</string>
    <string name="apply_filter">Filter</string>
    <string name="applying_filter">Please Wait, Applying Filter</string>
    <string name="block_app_tab_label">Active Apps</string>
    <string name="allowed_app_tab_label">Excluded Apps</string>
    <string name="block_url_tab_label">Blocked URLs</string>
    <string name="allowed_url_tab_label">Allowed URLs</string>
    <string name="test_report">Test report</string>
    <string name="adhell_settings">Settings</string>
    <string name="change_dns_button">Change DNS</string>
    <string name="dns_1_address">DNS 1 Address</string>
    <string name="dns_2_address">DNS 2 Address</string>
    <string name="google_dns_1" translatable="false">8.8.8.8</string>
    <string name="google_dns_2" translatable="false">8.8.4.4</string>
    <string name="set_dns_button_text">Set DNS</string>
    <string name="cancel_text">Cancel</string>
    <string name="note_that_adhell_must_be_enabled">Use it only if you know what DNS for and what
        benefits or problems editing could cause. Note that Adhell must be enabled.
    </string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="zero_dns" translatable="false">0.0.0.0</string>
    <string name="block">Block</string>
    <string name="manage_standard_url_package">Whitelist Custom URLs</string>
    <string name="whitelist_ad_url">Whitelist</string>
    <string name="block_custom_urls">Block Custom Urls/Rules</string>
    <string name="to_take_effect_turn_off_turn_on_adhell_after_editing_list">
        To take effect, turn off and turn on Adhell after editing list.\n\nAn URL can contain wildcard, e.g. *facebook.com\nTo define a firewall rule, please use this following format:\npackageName|ipAddress|port\nA rule example for blocking port 53 for Chrome app:\ncom.android.chrome|*|53
    </string>
    <string name="download_manager_sharedPrefs" translatable="false">download_manager_sharedPrefs
    </string>
    <string name="download_manager_reference_id" translatable="false">
        download_manager_reference_id
    </string>
    <string name="blocker_fragment_title" translatable="false">Adhell 3</string>
    <string name="package_disabler_fragment_title">Package disabler</string>
    <string name="package_disabler_bottombar_title">Package disabler</string>
    <string name="app_support_fragment_title">App support</string>
    <string name="to_be_done">This feature is under development</string>
    <string name="last_day_blocked">"Last 24 hours blocked: "</string>
    <string name="loading_saved_dns">Loading saved dns addresses</string>
    <string name="check_input_dns">Check your input data</string>
    <string name="enable_adhell_for_dns">Adhell Must be enabled</string>
    <string name="changed_dns">Dns addresses has been changed"</string>
    <string name="restored_dns">DNS has been restored to defaults. You should to enable Adhell
        again.
    </string>
    <string name="wait_loading_apps_list">"Please Wait, Loading Application List"</string>
    <string name="wait_removing_app_from_whitelist">"Please Wait, Removing App From Whitelist"
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="support_app_development">Support app development</string>
    <string name="help_developers_to_keep_up_development" translatable="false">
        Here you can support Adhell\'s development. \n
        I\'m a broke college student and there are no premium features anymore. \n
        I\'m just doing this in my spare time. \n
        Donations are completely unnecessary but greatly appreciated. \n
    </string>
    <string name="add_provider">Add Url Provider</string>
    <string name="adaway_hosts" translatable="false">https://adaway.org/hosts.txt</string>
    <string name="_2597" translatable="false">2597</string>
    <string name="show_custom_providers">Edit Custom Providers</string>
    <string name="delete_url">Delete Url</string>
    <string name="update_all_providers">Update All Providers</string>
    <string name="_2017_06_30_16_00_00" translatable="false">2017-06-30 16:00:00</string>
    <string name="app_list_sorted_by_date">List is sorted by installation time</string>
    <string name="app_list_sorted_by_alphabet">List is sorted alphabetically</string>
    <string name="subscribe">Subscribe for {{price}} per month</string>
    <string name="subscribe_three_month">Subscribe for {{price}} per 3 month with 20% discount
    </string>
    <string name="premium_subscriber_message">Thank you for being premium subscriber</string>
    <string name="already_premium">Already Premium</string>
    <string name="custom_url_provider_message">
        You can add your own hosts link either remote or local.\nYou can block up to 15 000 urls.\nAdhell already has decent standard package so in general you don\'t need to add additional host list.\nRemote: https://adaway.org/hosts.txt\nLocal on internal storage: file:///mnt/sdcard/hosts.txt
    </string>
    <string name="ads_example_com" translatable="false">ads.example.com</string>
    <string name="your_device_running_old_knox_version">
        Your device running old version of Knox. So this function may work unstable. Sorry
    </string>
    <string name="valid_subs">Your subscription is valid</string>
    <string name="adblock_whitelist">Adblocked Apps</string>
    <string name="application_icon">App Icon</string>
    <string name="only_for_premium">App Permissions available only for premium subscribers. Note
        that App Permissions work only with non-system apps (apps that you have installed manually).
        We offer 7 days free trial.
    </string>
    <string name="subs_not_supported_text_view">Subscription mode is not supported. Please update
        Google Play Services
    </string>
    <string name="billing_not_supported">Not Supported</string>
    <string name="sort_by_alphabet">Sort Alphabetically</string>
    <string name="sort_by_install_time">Sort by Install Time</string>
    <string name="sort_by_disabled">Show Disabled First</string>
    <string name="disabler_import_storage" translatable="false">Import from Storage</string>
    <string name="disabler_export_storage" translatable="false">Export to Storage</string>
    <string name="disabler_enable_all" translatable="false">Enable All Apps</string>
    <string name="imported_from_storage" translatable="false">Importing disabled apps from storage</string>
    <string name="exported_to_storage" translatable="false">Disabled apps exported to adhell_packages.txt</string>
    <string name="enabled_all_disabled" translatable="false">Enabling all disabled apps</string>
    <string name="adhell_export_file" translatable="false">adhell_packages.txt</string>
    <string name="app_list_sorted_by_disabled">Disabled apps are shown first</string>
    <string name="app_profiles_tab_title">Profiles</string>
    <string name="app_permissions_tab_title">Permissions</string>
    <string name="sort_by_restricted">Sort by Restricted First</string>
</resources>